# Vessa

./: .gitattributes  .gitignore  README.md  docker-compose.waf.yml  docker-compose.yml
absolution/: README.md  original_code.ipynb  pyproject.toml  requirements.txt  test-model.py  usage.ipynb
absolution/Models/: README.md
absolution/Models/binary-classifier/: model.safetensors
absolution/Models/multi-classifier/: config.json
absolution/src/absolution/: __init__.py  model_loader.py
firewall-app/: Dockerfile  Dockerfile.waf  ONBOARDING.md  README.md  __init__.py  alembic.ini  cli.py  env.example  gunicorn.conf.py  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  start_server.sh  vessa.service  waf_config.example.yaml
firewall-app/alembic/: env.py
firewall-app/alembic/versions/: 24fcff65dfc3_add_audit_log_table.py  cbe3459cf212_initial_migration_with_all_models.py  cbea353d4a0b_initial_migration.py
firewall-app/examples/: client_integration.py  fastapi_waf_example.py  flask_waf_example.py
firewall-app/scripts/: backup.sh  restore.sh
firewall-app/services/: __init__.py
firewall-app/services/auth/api/: routes.py  schemas.py
firewall-app/services/auth/core/: auth_service.py
firewall-app/services/common/: config.py  rate_limit.py
firewall-app/services/common/audit/: __init__.py  audit_logger.py
firewall-app/services/common/database/: session.py
firewall-app/services/common/logging/: __init__.py  structured_logger.py
firewall-app/services/common/middleware/: auth_rate_limit.py  https_redirect.py  rate_limit.py  request_logging.py  security_headers.py
firewall-app/services/common/models/: __init__.py  audit_log.py  base.py  (+3 more)
firewall-app/services/threat_intelligence/: __init__.py
firewall-app/services/waf/: __init__.py  blocking_engine.py  reverse_proxy.py  waf_config.py  waf_engine.py  waf_middleware.py
firewall-app/tests/: conftest.py
firewall-app/tests/attack-simulation/: README.md  attack.py  package-lock.json  package.json  run_attack_test.py  server.js
firewall-app/tests/services/: __init__.py
(+97 files in other folders)
