[tool.poetry]
name = "absolution"
version = "0.1.0"
description = "Absolution is a pair of state-of-the-art machine learning model for detecting and classifying malicious HTTP requests, including binary and multi-class classification with OOD detection."


authors = ["Jash Naik <jashnaik2004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = ">=4.52.4,<5.0.0"
torch = "^2.0.1"
numpy = "^1.25.0"
typing-extensions = "^4.7.1"
torchvision = "^0.22.1"
torchaudio = "^2.7.1"


[[tool.poetry.packages]]
include = "absolution"
from = "src"


[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
